--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: showtext
 Type: Package
 Title: Using Fonts More Easily in R Graphs
-Version: 0.3
-Date: 2015-03-10
+Version: 0.4-1
+Date: 2015-04-24
 Author: Yixuan Qiu and authors/contributors of the
     included software. See file AUTHORS for details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: Making it easy to use various types of fonts
     (TrueType, OpenType, Type 1, web fonts, etc.) in R graphs, and
     supporting most output formats of R graphics including PNG, PDF and
-    SVG. Fonts will be embedded in the graph file, hence after the plot
-    has been created, it no longer relies on the font files.
+    SVG. Text glyphs will be converted into polygons or raster images,
+    hence after the plot has been created, it no longer relies on the font files.
     No external software such as Ghostscript is needed to use this package.
 Depends: sysfonts
 Imports: showtextdb
@@ -19,7 +19,7 @@ URL: https://github.com/yixuan/showtext
 BugReports: https://github.com/yixuan/showtext/issues
 License: Apache License (>= 2.0)
 Copyright: see file COPYRIGHTS
-Packaged: 2015-03-10 23:18:07 UTC; qyx
+Packaged: 2015-04-25 12:41:54 UTC; qyx
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2015-03-11 07:53:40
+Date/Publication: 2015-04-27 14:59:17
